# open-cli

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_ID.md  deny.toml  docker-compose.ci.yml  docker-compose.sequential.yml  docker-compose.test.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: contributors.yml  docker.yml  test.yml
docs/: CONTRIBUTING.md  DOCKER.md
scripts/: check.py  docker-dev.sh  format.py  setup-test-scenarios.py  setup-test-scenarios.sh  test.py
src/: cache.rs  lib.rs  main.rs  result.rs  security.rs
src/cli/: mod.rs  parser.rs
src/commands/: build.rs  install.rs  mod.rs  run.rs  setup.rs
src/compiler/: config.rs  downloader.rs  manager.rs  mod.rs
src/package/: config_manager.rs  downloader.rs  lock.rs  manager.rs  mod.rs  version.rs  workspace.rs
src/utils/: process.rs
translate/indonesia-id/: README.md
translate/russian-ru/: README.md
